// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files 1`] = `
Array [
  "class-diagram.html",
  "class-diagram.md",
]
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: class-diagram.html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <title>Mermaid Class Diagram - by openapi-mermaid</title>
    <meta content=\\"text/html; charset=utf-8\\" />
    <script src=\\"https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js\\"></script>
    <script>mermaid.initialize({startOnLoad:true});</script>
  </head>
  <body>
    <pre>
      <div class=\\"mermaid\\">
classDiagram

  Employee ..> EmployeeCertification
  Employee ..> EmployeeCompetency
  Employee ..> EmployeeHealthItem

  class EmployeeCertification{
    +uuid: id
    +uuid: employeeId
    +uuid: certificationId
    +string: certificationName
    +date: expiresOnUtc
  }
  class EmployeeCompetency{
    +uuid: id
    +uuid: employeeId
    +uuid: competencyId
    +string: competencyName
    +date: expiresOnUtc
    +bool: isEnabled
  }
  class EmployeeHealthItem{
    +uuid: id
    +uuid: employeeId
    +uuid: healthItemId
    +string: healthItemName
    +date: expiresOnUtc
    +bool: isEnabled
  }
  class Employee{
    +uuid: id
    +string: lastName
    +string: firstName
    +date: birthDate
    +string: mobilePhone
    +string: homePhone
    +string: photo
    +string: email
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isEnabled
    +date: hireDate
    +date: fireDate
    +number: totalHoursOfService
    +number: certificationCount
    +number: competencyCount
    +number: healthItemCount
    +EmployeeCertification[]: employeeCertifications;
    +EmployeeCompetency[]: employeeCompetencies;
    +EmployeeHealthItem[]: employeeHealthItems;
  }
      </div>
    </pre>
    <div style=\\"font-family: Arial, Helvetica, sans-serif; font-size: small;\\">
      This file was generated by the <a href=\\"https://www.npmjs.com/package/openapi-mermaid\\">openapi-mermaid</a> tool.
    </div>
  </body>
</html>
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: class-diagram.md 1`] = `
"\`\`\`mermaid
classDiagram

  Employee ..> EmployeeCertification
  Employee ..> EmployeeCompetency
  Employee ..> EmployeeHealthItem

  class EmployeeCertification{
    +uuid: id
    +uuid: employeeId
    +uuid: certificationId
    +string: certificationName
    +date: expiresOnUtc
  }
  class EmployeeCompetency{
    +uuid: id
    +uuid: employeeId
    +uuid: competencyId
    +string: competencyName
    +date: expiresOnUtc
    +bool: isEnabled
  }
  class EmployeeHealthItem{
    +uuid: id
    +uuid: employeeId
    +uuid: healthItemId
    +string: healthItemName
    +date: expiresOnUtc
    +bool: isEnabled
  }
  class Employee{
    +uuid: id
    +string: lastName
    +string: firstName
    +date: birthDate
    +string: mobilePhone
    +string: homePhone
    +string: photo
    +string: email
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isEnabled
    +date: hireDate
    +date: fireDate
    +number: totalHoursOfService
    +number: certificationCount
    +number: competencyCount
    +number: healthItemCount
    +EmployeeCertification[]: employeeCertifications;
    +EmployeeCompetency[]: employeeCompetencies;
    +EmployeeHealthItem[]: employeeHealthItems;
  }
\`\`\`
This file was generated by the [openapi-mermaid](https://www.npmjs.com/package/openapi-mermaid) tool.
"
`;
